// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Inputs/Textarea Dark Background 1`] = `
.c1 {
  background-color: #FFF;
  color: #252525;
  font-size: 14px;
  font-weight: 300;
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  border-radius: 25px;
  padding: 0 20px;
  height: 45px;
  border: none;
  outline: none;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  width: 100%;
  padding-top: 17px;
  padding-bottom: 17px;
  resize: none;
  height: 90px;
}

.c1:focus,
.c1:active {
  box-shadow: 0 0 10px rgba(0,0,0,0.8);
}

.c1::-webkit-input-placeholder {
  color: #252525;
  font-style: italic;
}

.c1::-moz-placeholder {
  color: #252525;
  font-style: italic;
}

.c1:-ms-input-placeholder {
  color: #252525;
  font-style: italic;
}

.c1::placeholder {
  color: #252525;
  font-style: italic;
}

.c0 {
  padding: 1rem;
  background-color: #6D6E70;
}

<div
  className="c0"
>
  <div
    style={
      Object {
        "maxWidth": 500,
      }
    }
  >
    <textarea
      className="c1"
      placeholder="Type something..."
    />
  </div>
</div>
`;

exports[`Storyshots Inputs/Textarea Filled 1`] = `
.c1 {
  background-color: #FFF;
  color: #252525;
  font-size: 14px;
  font-weight: 300;
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  border-radius: 25px;
  padding: 0 20px;
  height: 45px;
  border: none;
  outline: none;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  width: 100%;
  padding-top: 17px;
  padding-bottom: 17px;
  resize: none;
  height: 90px;
}

.c1:focus,
.c1:active {
  box-shadow: 0 0 10px rgba(0,0,0,0.8);
}

.c1::-webkit-input-placeholder {
  color: #252525;
  font-style: italic;
}

.c1::-moz-placeholder {
  color: #252525;
  font-style: italic;
}

.c1:-ms-input-placeholder {
  color: #252525;
  font-style: italic;
}

.c1::placeholder {
  color: #252525;
  font-style: italic;
}

.c0 {
  padding: 1rem;
  background-color: #6D6E70;
}

<div
  className="c0"
>
  <div
    style={
      Object {
        "maxWidth": 500,
      }
    }
  >
    <textarea
      className="c1"
      data-testid="textarea"
      placeholder="Type something..."
    />
  </div>
</div>
`;

exports[`Storyshots Inputs/Textarea Light Background 1`] = `
.c1 {
  background-color: #FFF;
  color: #252525;
  font-size: 14px;
  font-weight: 300;
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  border-radius: 25px;
  padding: 0 20px;
  height: 45px;
  border: none;
  outline: none;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  width: 100%;
  border: 1px solid #C4C4C4;
  padding-top: 17px;
  padding-bottom: 17px;
  resize: none;
  height: 90px;
}

.c1:focus,
.c1:active {
  box-shadow: 0 0 10px rgba(135,135,135,0.8);
}

.c1::-webkit-input-placeholder {
  color: #252525;
  font-style: italic;
}

.c1::-moz-placeholder {
  color: #252525;
  font-style: italic;
}

.c1:-ms-input-placeholder {
  color: #252525;
  font-style: italic;
}

.c1::placeholder {
  color: #252525;
  font-style: italic;
}

.c0 {
  padding: 1rem;
  background-color: #F5F5F5;
}

<div
  className="c0"
>
  <div
    style={
      Object {
        "maxWidth": 500,
      }
    }
  >
    <textarea
      className="c1"
      placeholder="Type something..."
    />
  </div>
</div>
`;

exports[`Storyshots Inputs/Textarea Max Lenght 100 1`] = `
.c1 {
  background-color: #FFF;
  color: #252525;
  font-size: 14px;
  font-weight: 300;
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  border-radius: 25px;
  padding: 0 20px;
  height: 45px;
  border: none;
  outline: none;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  width: 100%;
  padding-top: 17px;
  padding-bottom: 17px;
  resize: none;
  height: 90px;
}

.c1:focus,
.c1:active {
  box-shadow: 0 0 10px rgba(0,0,0,0.8);
}

.c1::-webkit-input-placeholder {
  color: #252525;
  font-style: italic;
}

.c1::-moz-placeholder {
  color: #252525;
  font-style: italic;
}

.c1:-ms-input-placeholder {
  color: #252525;
  font-style: italic;
}

.c1::placeholder {
  color: #252525;
  font-style: italic;
}

.c0 {
  padding: 1rem;
  background-color: #6D6E70;
}

<div
  className="c0"
>
  <div
    style={
      Object {
        "maxWidth": 500,
      }
    }
  >
    <textarea
      className="c1"
      maxLength={100}
      placeholder="Type something..."
    />
  </div>
</div>
`;
